Fixing Events button to display on mobile.

--- a/style/redesign-main.css
+++ b/style/redesign-main.css
@@ -60,14 +60,10 @@ nav {
   align-items: center;
   width: 100%;
   height: 3em;
-
   color: white;
-
   font-size: 24px;
 }
 nav a {
-  margin: 20px 30px;
-
   color: white;
   font-size: 0.8em;
   text-decoration: none;
@@ -77,7 +73,6 @@ nav img {
   margin-right: auto;
   height: 80%;
 }
-
 @media (max-width: 750px) {
   nav img {
     margin-left: 20px;
@@ -85,6 +80,11 @@ nav img {
 
   .hide-mobile {
     display: none;
+  }
+}
+@media (min-width: 440px) {
+  nav a {
+    margin: 20px 30px;
   }
 }
 
